[package]
name = "gateconvert"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gateconvert"
path = "src/main.rs"

[dependencies]
gatesim = { version="0.1.0", path="../gatesim" }
gategen = { version="0.1.0", path="../gategen" }
clap = { version = "4.5.3", features = ["derive"] }
cnfgen = "0.4.0"
flussab-cnf = "0.3"
flussab-aiger = "0.1"
