[package]
name = "gateconvert"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
gatesim = { version="0.1.0", path="../gatesim" }
gateutil = { version="0.1.0", path="../gateutil" }
gategen = { version="0.1.0", path="../gategen" }
static_init = "1.0"
cnfgen = "0.4.0"
flussab-cnf = "0.3"
flussab-aiger = "0.1"
flussab = "0.3.1"
thiserror = "1.0"
