[package]
name = "gateconvert"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"
description = "The library to convert Gate circuit from/to foreign logic format."
repository = "https://github.com/matszpk/gateconvert"
documentation = "https://docs.rs/gateconvert"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[lib]
path = "src/lib.rs"

[dependencies]
gateutil = "0.1.0"
gategen = "0.2.0"
static_init = "1.0"
cnfgen = "0.6.0"
flussab-cnf = "0.3"
flussab-aiger = "0.1"
flussab = "0.3.1"
thiserror = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
